# bibmanagement

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
scripts/: cnrs-report.py  gen.py  main.py  websitePubli.py
src/bibmanagement/: Biblio.py  Entry.py  __init__.py  bibParser.py
src/bibmanagement/Fields/: Authors.py  BasicFields.py  Booktitle.py  Date.py  Field.py  FormatExpr.py  Journal.py  Month.py  Name.py  NonStandardFields.py  NumericField.py  Pages.py  StringField.py
src/bibmanagement/FormatExpr/: CondParserGenerator.py  Formatter.py  Parser.py  ParserGenerator.py
src/bibmanagement/check/: Crossref.py  Keys.py  LevenshteinDistance.py  Names.py  Order.py  Sanitize.py  __init__.py
src/bibmanagement/extra/: Position.py  authorData.py
tests/: __init__.py  test_Biblio.py  test_Entry.py  test_bibParser.py
tests/Fields/: test_Authors.py  test_BasicFields.py  test_Booktitle.py  test_Date.py  test_Field.py  test_FormatExpr.py  test_Journal.py  test_Month.py  test_Name.py  test_NonStandardFields.py  test_NumericFields.py  test_Pages.py  test_StringField.py
tests/FormatExpr/: test_CondParserGenerator.py  test_Formatter.py  test_Parser.py  test_ParserGenerator.py
tests/check/: test_Crossref.py  test_Keys.py  test_LevenshteinDistance.py  test_Names.py  test_Order.py  test_Sanitize.py
tests/data/: AE.bib  sample.bib  sample_conf.json  sample_journal.json  sample_journal_bad.json
tests/scripts/: test_cnrs_report.py  test_main.py
tests/utils/: test_BibFilter.py  test_FormattedString.py  test_Sort.py  test_StyleFilters.py
(+34 files in other folders)
